Updates on the graphing

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,6 +3,7 @@ SETTINGS
     - random colors when grouping
     - auto save on new connection/node/break connection/delete
     - auto save on time
+    - start maximized
 
 
 TODO
