--- a/TODO.txt
+++ b/TODO.txt
@@ -12,3 +12,5 @@ TODO
     - Move node into group adds it to group
     - add graph combiner to draw multiple plotnodes at the same time
     - dragging from connected input socket disconnects -> show a dragconnection
+    - download node zip from server
+    - make ui item connectable
