--- a/TODO.txt
+++ b/TODO.txt
@@ -14,3 +14,4 @@ TODO
     - dragging from connected input socket disconnects -> show a dragconnection
     - download node zip from server
     - make ui item connectable
+    - save/load value from ui item without manually having to save/load it -> make custom slider, line_edit etc
